--- a/problem-sets/homepage/styles.css
+++ b/problem-sets/homepage/styles.css
@@ -1,13 +1,23 @@
-.form-control-dark {
+  .form-control-dark {
     border-color: var(--bs-gray);
   }
+
   .form-control-dark:focus {
     border-color: #fff;
     box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
   }
 
+  .bg-img{
+    background-image: url('/images/bg-header.png');
+    height: 100vh;
+  }
+
   .text-small {
     font-size: 85%;
+  }
+
+  .text-big {
+    font-size: 200%;
   }
 
   .dropdown-toggle {
@@ -28,7 +38,7 @@
     }
   }
 
-  .b-example-divider {
+  .divider1 {
     height: 3rem;
     background-color: rgba(0, 0, 0, .1);
     border: solid rgba(0, 0, 0, .15);
@@ -45,24 +55,6 @@
   .bi {
     vertical-align: -.125em;
     fill: currentColor;
-  }
-
-  .nav-scroller {
-    position: relative;
-    z-index: 2;
-    height: 2.75rem;
-    overflow-y: hidden;
-  }
-
-  .nav-scroller .nav {
-    display: flex;
-    flex-wrap: nowrap;
-    padding-bottom: 1rem;
-    margin-top: -1px;
-    overflow-x: auto;
-    text-align: center;
-    white-space: nowrap;
-    -webkit-overflow-scrolling: touch;
   }
 
   .div.spacing{
