--- a/problem-sets/homepage/styles.css
+++ b/problem-sets/homepage/styles.css
@@ -61,9 +61,9 @@
     height: 5rem;
   }
 
-  .img.card{
+  .img.card-size{
     width: 100%;
-    height: 100%;
+    height: 70px;
   }
 
   .feature-icon {
