Sat, Feb 4, 2023, 10:30 PM +07:00

--- a/problem-sets/finance/templates/quoted.html
+++ b/problem-sets/finance/templates/quoted.html
@@ -7,6 +7,9 @@
 {% block main %}
 <div>
     {% for symbol in symbols %}
+        <!-- {{ symbol.name }}
+        {{ symbol.price }} -->
+        <!-- {{ symbol.symbol }} -->
         {{ symbol }}
     {% endfor %}
 </div>
