--- a/problem-sets/finance/templates/quote.html
+++ b/problem-sets/finance/templates/quote.html
@@ -7,9 +7,9 @@
 {% block main %}
 <form action="/quote" method="post">
     <div class="mb-3">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="sybmol" type="text">
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="symbol" type="text">
     </div>
 
-    <button class="btn btn-primary" type="submit">Log In</button>
+    <button class="btn btn-primary" type="submit">Submit Symbol</button>
 </form>
 {% endblock %}
