Sat, Feb 4, 2023, 10:48 PM +07:00

--- a/problem-sets/finance/templates/quoted.html
+++ b/problem-sets/finance/templates/quoted.html
@@ -25,9 +25,9 @@
         <!-- {{ symbol.symbol }} -->
         <!-- {{ symbol }} -->
         <tr>
-            <td>{{ symbol.name }}</td>
-            <td>{{ symbol.price }}</td>
-            <td>{{ symbol.symbol }}</td>
+            <td>{{ symbol["name"] }}</td>
+            <td>{{ symbol["price"] }}</td>
+            <td>{{ symbol["symbol"] }}</td>
         </tr>
     {% endfor %}
 
