Sat, Feb 4, 2023, 11:05 PM +07:00

--- a/problem-sets/finance/templates/quoted.html
+++ b/problem-sets/finance/templates/quoted.html
@@ -19,15 +19,15 @@
             </th>
         </thead>
         <tbody>
-    {% for symbol in symbols %}
+    {% for key in symbols %}
         <!-- {{ symbol.name }}
         {{ symbol.price }} -->
         <!-- {{ symbol.symbol }} -->
         <!-- {{ symbol }} -->
         <tr>
-            <td>{{ symbol }}</td>
-            <td>{{ symbol }}</td>
-            <td>{{ symbol }}</td>
+            <td>{{ symbols[key].name }}</td>
+            <td>{{ symbols[key].price }}</td>
+            <td>{{ symbols[key].symbol }}</td>
         </tr>
     {% endfor %}
 
