Sat, Feb 4, 2023, 11:06 PM +07:00

--- a/problem-sets/finance/templates/quoted.html
+++ b/problem-sets/finance/templates/quoted.html
@@ -27,7 +27,7 @@
         <tr>
             <td>{{ symbols[key].name }}</td>
             <td>{{ symbols[key].price }}</td>
-            <td>{{ symbols[key].symbol }}</td>
+            <!-- <td>{{ symbols[key].symbol }}</td> -->
         </tr>
     {% endfor %}
 
