Sat, Feb 4, 2023, 11:08 PM +07:00

--- a/problem-sets/finance/templates/quoted.html
+++ b/problem-sets/finance/templates/quoted.html
@@ -20,14 +20,10 @@
         </thead>
         <tbody>
     {% for key in symbols %}
-        <!-- {{ symbol.name }}
-        {{ symbol.price }} -->
-        <!-- {{ symbol.symbol }} -->
-        <!-- {{ symbol }} -->
-        <tr>
+         <tr>
             <td>{{ symbols[key].name }}</td>
             <td>{{ symbols[key].price }}</td>
-            <!-- <td>{{ symbols[key].symbol }}</td> -->
+            <td>{{ symbols[key].symbol }}</td>
         </tr>
     {% endfor %}
 
