--- a/problem-sets/finance/templates/quoted.html
+++ b/problem-sets/finance/templates/quoted.html
@@ -6,6 +6,7 @@
 
 {% block main %}
 <div>
-    {{ symbols }}
+    <p class="text-center">A share of {{ symbols["name"] }} ({{ symbols["symbol"] }}) costs {{ symbols["price"] }} </p>
+    <!-- {{ symbols }} -->
 </div>
 {% endblock %}
