--- a/problem-sets/finance/templates/buy.html
+++ b/problem-sets/finance/templates/buy.html
@@ -10,9 +10,9 @@
         <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="symbol" type="text">
     </div>
     <div class="mb-3">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="symbol" type="text">
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="symbol" type="number" min="1">
     </div>
 
-    <button class="btn btn-primary" type="submit">Submit Symbol</button>
+    <button class="btn btn-primary" type="submit">Buy</button>
 </form>
 {% endblock %}
