--- a/problem-sets/finance/templates/buy.html
+++ b/problem-sets/finance/templates/buy.html
@@ -5,12 +5,12 @@
 {% endblock %}
 
 {% block main %}
-<form action="/quote" method="post">
+<form action="/buy" method="post">
     <div class="mb-3">
         <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="symbol" type="text">
     </div>
     <div class="mb-3">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="symbol" type="number" min="1">
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="shares" type="number" min="1">
     </div>
 
     <button class="btn btn-primary" type="submit">Buy</button>
