Sun, Feb 5, 2023, 3:42 AM +07:00

--- a/problem-sets/finance/templates/index.html
+++ b/problem-sets/finance/templates/index.html
@@ -14,7 +14,7 @@
     {{ new_cash }} -->
 
     <div class="container">
-        <table class="table-striped">
+        <table class="table table-striped">
             <thead>
                 <th>Symbol</th>
                 <th>Name</th>
