Sun, Feb 5, 2023, 4:35 AM +07:00

--- a/problem-sets/finance/templates/sell.html
+++ b/problem-sets/finance/templates/sell.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Buy
+    Sell
 {% endblock %}
 
 {% block main %}
@@ -13,6 +13,6 @@
         <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="shares" type="number" min="1">
     </div>
 
-    <button class="btn btn-primary" type="submit">Buy</button>
+    <button class="btn btn-primary" type="submit">Sel</button>
 </form>
 {% endblock %}
