Sun, Feb 5, 2023, 4:41 AM +07:00

--- a/problem-sets/finance/templates/sell.html
+++ b/problem-sets/finance/templates/sell.html
@@ -7,7 +7,12 @@
 {% block main %}
 <form action="/buy" method="post">
     <div class="mb-3">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="symbol" type="text">
+        <!-- <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="symbol" type="text"> -->
+        <select name="symbol">
+            {% for symbol in symbols %}
+                <option value={{ symbol }}>{{ symbol }}</option>
+            {% end for %}
+        </select>
     </div>
     <div class="mb-3">
         <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="shares" type="number" min="1">
