--- a/problem-sets/finance/templates/sell.html
+++ b/problem-sets/finance/templates/sell.html
@@ -5,13 +5,13 @@
 {% endblock %}
 
 {% block main %}
-<form action="/buy" method="post">
+<form action="/sell" method="post">
     <div class="mb-3">
         <!-- <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="symbol" type="text"> -->
         <select name="symbol">
             {% for symbol in symbols %}
                 <option value={{ symbol }}>{{ symbol }}</option>
-            {% end for %}
+            {% endfor %}
         </select>
     </div>
     <div class="mb-3">
