--- a/problem-sets/finance/templates/sell.html
+++ b/problem-sets/finance/templates/sell.html
@@ -11,7 +11,7 @@
 
         <select name="symbol">
             {% for symbol in symbols %}
-                <option value="{{ symbol['symbol'] }}">{{ symbol["symbol"] }}</option>
+                <option value="{{ symbol }}">{{ symbol }}</option>
             {% endfor %}
         </select>
     </div>
