Sun, Feb 5, 2023, 5:09 AM +07:00

--- a/problem-sets/finance/templates/sell.html
+++ b/problem-sets/finance/templates/sell.html
@@ -5,19 +5,14 @@
 {% endblock %}
 
 {% block main %}
-<form action="/sell" method="post">
+<form action="/sell" method="post" class="form-group">
     <div class="mb-3">
-        <!-- <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="symbol" type="text"> -->
-
-        <!-- <select name="symbol">
+        <select name="symbol">
             {% for symbol in symbols %}
-                <option value="{{ symbol}}">{{ symbol }}</option>
+                <option class="form-control" value="{{ symbol.symbol }}">{{ symbol.symbol }}</option>
             {% endfor %}
-        </select> -->
-        <!-- {% for symbol in symbols %}
-            <p>{{ symbol["symbol"] }}</p>
-        {% endfor %} -->
-        <p>{{ symbol }}</p>
+        </select>
+
     </div>
     <div class="mb-3">
         <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="shares" type="number" min="1">
