--- a/problem-sets/finance/templates/quote.html
+++ b/problem-sets/finance/templates/quote.html
@@ -10,6 +10,6 @@
         <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="symbol" type="text">
     </div>
 
-    <button class="btn btn-primary" type="submit">Submit Symbol</button>
+    <button class="btn btn-primary" name="submit" type="submit">Quote</button>
 </form>
 {% endblock %}
