Mon, Feb 6, 2023, 12:37 AM +07:00

--- a/problem-sets/finance/templates/history.html
+++ b/problem-sets/finance/templates/history.html
@@ -29,7 +29,7 @@
                 {% for hist in history %}
                 <tr>
                     <td>{{ hist["symbol"] }}</td>
-                    <td>{{ hist["price"] }}</td>
+                    <td>{{ hist["price"] | usd }}</td>
                     <td>{{ hist["shares"] }}</td>
                     <td>{{ hist["trx_time"] }}</td>
                 </tr>
