Mon, Feb 6, 2023, 12:40 AM +07:00

--- a/problem-sets/finance/templates/index.html
+++ b/problem-sets/finance/templates/index.html
@@ -23,6 +23,7 @@
             <thead>
                 <th>Symbol</th>
                 <th>Name</th>
+                <th>Shares</th>
                 <th>Price</th>
 
             </thead>
@@ -32,6 +33,7 @@
                 <tr>
                     <td>{{ porto["symbol"] }}</td>
                     <td>{{ porto["name"] }}</td>
+                    <td>{{ porto["shares"] }}</td>
                     <td>{{ porto["price"] | usd }}</td>
                     <td>{{ shares }}</td>
                 </tr>
