Mon, Feb 6, 2023, 1:19 AM +07:00

--- a/problem-sets/finance/templates/sell.html
+++ b/problem-sets/finance/templates/sell.html
@@ -8,7 +8,7 @@
 <form action="/sell" method="post" class="form-group">
     <div class="mb-3">
         <label for="symbol">Symbol</label>
-        <select name="symbol" class="form-control">
+        <select name="symbol" class="form-control mx-auto w-auto">
             {% for symbol in symbols %}
                 <option value="{{ symbol.symbol }}">{{ symbol.symbol }}</option>
             {% endfor %}
@@ -16,7 +16,7 @@
     </div>
     <div class="mb-3">
         <label for="shares">Shares to sell:</label>
-        <input autocomplete="off" autofocus class="form-control" id="shares" name="shares" placeholder="shares" type="number" min="1">
+        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="shares" type="number" min="1">
     </div>
 
     <button class="btn btn-primary" type="submit">Sell</button>
