Mon, Feb 6, 2023, 11:49 AM +07:00

--- a/problem-sets/finance/templates/sell.html
+++ b/problem-sets/finance/templates/sell.html
@@ -14,6 +14,9 @@
             {% endfor %}
         </select>
     </div>
+    <div>
+        Price: 
+    </div>
     <div class="mb-3">
         <label for="shares">Shares to sell:</label>
         <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="shares" type="number" min="1">
