Mon, Feb 6, 2023, 11:55 AM +07:00

--- a/problem-sets/finance/templates/sell.html
+++ b/problem-sets/finance/templates/sell.html
@@ -15,6 +15,7 @@
         </select>
     </div>
     <div>
+        {{ symbol.price | usd }}
     </div>
     <div class="mb-3">
         <label for="shares">Shares to sell:</label>
