--- a/final-project/masak-apa/templates/apology.html
+++ b/final-project/masak-apa/templates/apology.html
@@ -7,6 +7,6 @@
 {% block main %} -->
     <!-- https://memegen.link/ -->
     <img alt="{{ top }}" class="border img-fluid" src="http://memegen.link/custom/{{ top | urlencode }}/{{ bottom | urlencode }}.jpg?alt=https://i.imgur.com/CsCgN7Ll.png&width=400" title="{{ top }}">
- 
-    https://api.memegen.link/images/both/width_or_height/why_not_both~q.png?height=450&width=800
+
+    https://api.memegen.link/images/both/{{ top | urlencode }}/{{ bottom | urlencode }}~q.png?height=450&width=800
 <!-- {% endblock %} -->
