--- a/final-project/masak-apa/templates/apology.html
+++ b/final-project/masak-apa/templates/apology.html
@@ -6,8 +6,9 @@
 
 {% block main %} -->
     <!-- https://memegen.link/ -->
-    <img alt="{{ top }}" src="https://api.memegen.link/images/both/{{ top | urlencode }}/{{ bottom | urlencode }}~q.png?height=450&width=800" title="{{ top }}">
+    <img alt="{{ top }}" src="https://api.memegen.link/images/both/{{ top }}/{{ bottom }}~q.png?height=450&width=800" title="{{ top }}">
 
-    https://api.memegen.link/images/ds/high_quality/small_file.jpg
+
+
 
 <!-- {% endblock %} -->
