--- a/final-project/masak-apa/templates/apology.html
+++ b/final-project/masak-apa/templates/apology.html
@@ -1,12 +1,12 @@
-<!-- {% extends "layout.html" %}
+{% extends "layout.html" %}
 
 {% block title %}
     Apology
 {% endblock %}
 
-{% block main %} -->
+{% block main %}
     <!-- https://memegen.link/ -->
     <img alt="{{ top }}" src="https://api.memegen.link/images/both/{{ top | urlencode }}/{{ bottom | urlencode }}~q.png?height=450&width=800" title="{{ top }}">
 
 
-<!-- {% endblock %} -->
+{% endblock %}
