--- a/final-project/masak-apa/templates/layout.html
+++ b/final-project/masak-apa/templates/layout.html
@@ -62,7 +62,7 @@
         </main>
 
         <footer class="mb-5 small text-center text-muted">
-            Data provided by <a href="https://iexcloud.io/">IEX</a>
+            <p>Made by: Dewi-Nikmah-Lulut</p>
         </footer>
 
     </body>
