Sat, Feb 11, 2023, 5:05 AM +07:00

--- a/final-project/masak-apa/templates/apology.html
+++ b/final-project/masak-apa/templates/apology.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     <!-- https://memegen.link/ -->
-    <img alt="{{ top }}" src="https://api.memegen.link/images/both/{{ top | urlencode }}/{{ bottom | urlencode }}.png?height=450&width=800" title="{{ top }}">
+    <img alt="{{ top }}" src="https://api.memegen.link/images/both/{{ top | urlencode }}/{{ bottom | urlencode }}.png" title="{{ top }}">
 
 
 {% endblock %}
