--- a/final-project/masak-apa/templates/apology.html
+++ b/final-project/masak-apa/templates/apology.html
@@ -5,8 +5,10 @@
 {% endblock %}
 
 {% block main %}
+    <div class="container-fluid">
     <!-- https://memegen.link/ -->
-    <img alt="{{ top }}" src="https://api.memegen.link/images/both/{{ top | urlencode }}/{{ bottom | urlencode }}.png" title="{{ top }}">
+        <img alt="{{ top }}" src="https://api.memegen.link/images/both/{{ top | urlencode }}/{{ bottom | urlencode }}.png" title="{{ top }}" style="width: 40%">
+    </div>
 
 
 {% endblock %}
