--- a/final-project/masak-apa/templates/layout.html
+++ b/final-project/masak-apa/templates/layout.html
@@ -24,7 +24,7 @@
 
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"><span class="blue">M</span><span class="red">A</span><span class="yellow">S</span><span class="green">A</span><span class="BLACK">K</span> <span class="red">APA</span></a>
+                <a class="navbar-brand" href="/"><span class="blue text-primary">M</span><span class="red text-danger">A</span><span class="yellow text-warning">S</span><span class="green text-success">A</span><span class="BLACK text-dark">K</span> <span class="red">APA</span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -34,7 +34,7 @@
                             <li class="nav-item"><a class="nav-link" href="/browse">Browse Recipe</a></li>
                             <li class="nav-item"><a class="nav-link" href="/add">Submit Recipe</a></li>
                             <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
-                           
+
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
