--- a/final-project/masak-apa/templates/layout_admin.html
+++ b/final-project/masak-apa/templates/layout_admin.html
@@ -21,10 +21,9 @@
     </head>
 
     <body>
-
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/admin"><span class="blue">M</span><span class="red">A</span><span class="yellow">S</span><span class="green">A</span><span class="BLACK">K</span> <span class="red">APA</span></a>
+                <a class="navbar-brand" href="/admin"><span class="blue text-primar">M</span><span class="red">A</span><span class="yellow">S</span><span class="green">A</span><span class="BLACK">K</span> <span class="red">APA</span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
