--- a/final-project/masak-apa/templates/layout_admin.html
+++ b/final-project/masak-apa/templates/layout_admin.html
@@ -23,7 +23,7 @@
     <body>
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/admin"><span class="blue text-primar">M</span><span class="red">A</span><span class="yellow">S</span><span class="green">A</span><span class="BLACK">K</span> <span class="red">APA</span></a>
+                <a class="navbar-brand" href="/admin"><span class="blue text-primary">M</span><span class="red text-danger">A</span><span class="yellow text-warning">S</span><span class="green text-success">A</span><span class="BLACK text-info">K</span> <span class="red">APA?</span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
