--- a/final-project/masak-apa/templates/admin.html
+++ b/final-project/masak-apa/templates/admin.html
@@ -19,7 +19,7 @@
     <div class="container mt-5">
         <div class="row">
             <div class="text-white text-center col-sm-4 bg-primary p-5">
-                <h2>Users</h2>
+                <h2>{{ users }}Users</h2>
             </div>
             <div class="text-white text-center col-sm-4 bg-success p-5">
                 <h2>Recipes</h2>
