Sat, Feb 11, 2023, 10:00 PM +07:00

--- a/final-project/masak-apa/templates/admin.html
+++ b/final-project/masak-apa/templates/admin.html
@@ -22,7 +22,7 @@
                 <h2>{{ users['n_users'] }} Users</h2>
             </div>
             <div class="text-white text-center col-sm-4 bg-success p-5">
-                <h2>Recipes</h2>
+                <h2>{{ recipes['n_recipes'] }} Recipes</h2>
             </div>
             <div class="text-white text-center col-sm-4 bg-warning p-5">
                 <h2>Ingredients</h2>
