Sun, Feb 12, 2023, 2:50 AM +07:00

--- a/final-project/masak-apa/templates/admin.html
+++ b/final-project/masak-apa/templates/admin.html
@@ -19,13 +19,13 @@
     <div class="container mt-5">
         <div class="row">
             <div class="text-white text-center col-sm-4 bg-primary p-5">
-                <h2>{{ users['n_users'] }} Users</h2>
+                <h2>{{ users['n_users'] }}<br>Users</h2>
             </div>
             <div class="text-white text-center col-sm-4 bg-success p-5">
-                <h2>{{ recipes['n_recipes'] }} Recipes</h2>
+                <h2>{{ recipes['n_recipes'] }}<br>Recipes</h2>
             </div>
             <div class="text-white text-center col-sm-4 bg-warning p-5">
-                <h2>Ingredients</h2>
+                <h2>{{ ingredients['n_ingr'] }}<br>Ingredients</h2>
             </div>
         </div>
         <div class="row">
