--- a/final-project/masak-apa/templates/admin.html
+++ b/final-project/masak-apa/templates/admin.html
@@ -30,13 +30,13 @@
         </div>
         <div class="row">
             <div class="text-white text-center col-sm-4 bg-dark p-5">
-                <h2>Ingredient origins</h2>
+                <h2>{{ origins['n_ori'] }}<br>Ingredient origins</h2>
             </div>
             <div class="text-white text-center col-sm-4 bg-info p-5">
-                <h2>Categories</h2>
+                <h2>{{ categories['n_cat'] }}<br>Categories</h2>
             </div>
             <div class="text-white text-center col-sm-4 bg-danger p-5">
-                <h2>Measurement Units</h2>
+                <h2>{{ unit['n_unit'] }}<br>Measurement Units</h2>
             </div>
         </div>
     </div>
