Sun, Feb 12, 2023, 3:33 AM +07:00

--- a/final-project/masak-apa/templates/categories.html
+++ b/final-project/masak-apa/templates/categories.html
@@ -20,8 +20,8 @@
         </thead>
         <tbody>
             <tr>
-                <td>{{ }}</td>
-                <td>{{ }}</td>
+                <td>{{ categories["id"] }}</td>
+                <td>{{ categories["category"] }}</td>
             </tr>
         </tbody>
     </table>
