--- a/final-project/masak-apa/templates/categories.html
+++ b/final-project/masak-apa/templates/categories.html
@@ -1,16 +1,20 @@
-{% extends "layout.html" %}
+{% extends "layout_admin.html" %}
 
 {% block title %}
     Ingredient Categories
 {% endblock %}
 
 {% block main %}
+<div class="container-fluid mb-3">
     <form action="/admin/categories" method="post">
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="category" name="category" placeholder="Input a new ingredient category" type="text">
         </div>
         <button class="btn btn-primary" type="submit">Add</button>
     </form>
+</div>
+    <div class="container-sm mt-3">
+        <h2>Ingredient Categories</h2>
     <table class="table table-striped table-hover">
         <thead>
             <tr>
@@ -19,10 +23,13 @@
             </tr>
         </thead>
         <tbody>
+            {% for category in categories %}
             <tr>
-                <td>{{ categories["id"] }}</td>
-                <td>{{ categories["category"] }}</td>
+                <td>{{ category["id"] }}</td>
+                <td>{{ category["category"] }}</td>
             </tr>
+            {% endfor %}
         </tbody>
     </table>
+    </div>
 {% endblock %}
