--- a/final-project/masak-apa/templates/categories.html
+++ b/final-project/masak-apa/templates/categories.html
@@ -18,11 +18,13 @@
 <hr>
 <div class="container-sm mt-3">
     <h2>Ingredient Categories</h2>
+    <div class="mb-5"></div>
     <table class="table table-striped table-hover">
         <thead>
             <tr>
                 <th>#</th>
                 <th>Category</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody>
@@ -30,6 +32,10 @@
             <tr>
                 <td>{{ category["id"] }}</td>
                 <td>{{ category["category"] }}</td>
+                <td>
+                    <a href="/admin/categories/edit" class="btn btn-warning">Edit</a>
+                    <a href="/admin/categories/edit" class="btn btn-danger">Delete</a>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
