--- a/final-project/masak-apa/templates/categories.html
+++ b/final-project/masak-apa/templates/categories.html
@@ -33,7 +33,7 @@
                 <td>{{ category["id"] }}</td>
                 <td>{{ category["category"] }}</td>
                 <td>
-                    <a href="/admin/categories/edit" class="btn btn-warning">Edit</a>
+                    <a href="/admin/categories/actio" class="btn btn-warning">Edit</a>
                     <a href="/admin/categories/edit" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
