Sun, Feb 12, 2023, 3:51 AM +07:00

--- a/final-project/masak-apa/templates/categories.html
+++ b/final-project/masak-apa/templates/categories.html
@@ -33,8 +33,8 @@
                 <td>{{ category["id"] }}</td>
                 <td>{{ category["category"] }}</td>
                 <td>
-                    <a href="/admin/categories/actio" class="btn btn-warning">Edit</a>
-                    <a href="/admin/categories/edit" class="btn btn-danger">Delete</a>
+                    <a href="/admin/categories/edit" class="btn btn-warning">Edit</a>
+                    <a href="/admin/categories/delete" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
             {% endfor %}
