--- a/final-project/masak-apa/templates/categories.html
+++ b/final-project/masak-apa/templates/categories.html
@@ -22,8 +22,8 @@
     <table class="table table-striped table-hover">
         <thead>
             <tr>
-                <th>#</th>
-                <th>Category</th>
+                <th>Category ID</th>
+                <th>Category Name</th>
                 <th>Action</th>
             </tr>
         </thead>
