Sun, Feb 12, 2023, 4:22 AM +07:00

--- a/final-project/masak-apa/templates/categories.html
+++ b/final-project/masak-apa/templates/categories.html
@@ -34,7 +34,7 @@
                 <td>{{ category["category"] }}</td>
                 <td>
                     <a href="/admin/categories/{{ category['id'] }}/edit" class="btn btn-warning">Edit</a>
-                    <a href="/admin/categories/{{ category['id'] }}/delete" class="btn btn-danger">Delete</a>
+                    <a href="/admin/categories/{{ category['id'] }}/delete" onclick="return confirm('Are you sure you want to delete this item?');" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
             {% endfor %}
