--- a/final-project/masak-apa/templates/layout.html
+++ b/final-project/masak-apa/templates/layout.html
@@ -51,7 +51,7 @@
 
         {% if get_flashed_messages() %}
             <header>
-                <div class="alert alert-primary mb-0 text-center" role="alert">
+                <div class="alert alert-warning mb-0 text-center" role="alert">
                     {{ get_flashed_messages() | join(" ") }}
                 </div>
             </header>
