--- a/final-project/masak-apa/templates/admin.html
+++ b/final-project/masak-apa/templates/admin.html
@@ -1,7 +1,7 @@
 {% extends "layout_admin.html" %}
 
 {% block title %}
-    Index
+    Admin Dashboard
 {% endblock %}
 
 {% block main %}
@@ -15,7 +15,7 @@
     </ul>
   {% endif %}
 {% endwith %}
-
+    <h1>Howdy! Admin</h1>
     <div class="container mt-5">
         <div class="row">
             <div class="text-white text-center col-sm-4 bg-primary p-5">
