--- a/final-project/masak-apa/templates/origins.html
+++ b/final-project/masak-apa/templates/origins.html
@@ -33,8 +33,8 @@
                 <td>{{ origin["id"] }}</td>
                 <td>{{ origin["origin"] }}</td>
                 <td>
-                    <a href="/admin/origins/{{ category['id'] }}/edit" class="btn btn-warning">Edit</a>
-                    <a href="/admin/origins/{{ category['id'] }}/delete" onclick="return confirm('Are you sure you want to delete this item?');" class="btn btn-danger">Delete</a>
+                    <a href="/admin/origins/{{ origin['id'] }}/edit" class="btn btn-warning">Edit</a>
+                    <a href="/admin/origins/{{ origin['id'] }}/delete" onclick="return confirm('Are you sure you want to delete this item?');" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
             {% endfor %}
