--- a/final-project/masak-apa/templates/layout_admin.html
+++ b/final-project/masak-apa/templates/layout_admin.html
@@ -54,7 +54,7 @@
 
         {% if get_flashed_messages() %}
             <header>
-                <div class="alert alert-warning mb-0 text-center" role="alert">
+                <div class="alert alert-success mb-0 text-center" role="alert">
                     {{ get_flashed_messages() | join(" ") }}
                 </div>
             </header>
