--- a/final-project/masak-apa/templates/units.html
+++ b/final-project/masak-apa/templates/units.html
@@ -17,7 +17,7 @@
 </div>
 <hr>
 <div class="container-sm mt-3">
-    <h2>IMeasurement Units</h2>
+    <h2>Measurement Units</h2>
     <div class="mb-5"></div>
     <table class="table table-striped table-hover">
         <thead>
