Sun, Feb 12, 2023, 5:38 AM +07:00

--- a/final-project/masak-apa/templates/categories.html
+++ b/final-project/masak-apa/templates/categories.html
@@ -8,10 +8,10 @@
 <div class="container-fluid mb-3">
     <form action="/admin/categories" method="post">
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="category" name="category" placeholder="Add a new category" type="text">
+            <input autocomplete="off" autofocus class="form-control" id="category" name="category" placeholder="Add a new category" type="text">
         </div>
         <div class="mb-3">
-            <button class="btn btn-primary" type="submit">Add</button>
+            <button class="btn btn-primary form-control" type="submit">Add</button>
         </div>
     </form>
 </div>
