Sun, Feb 12, 2023, 5:49 AM +07:00

--- a/final-project/masak-apa/templates/units.html
+++ b/final-project/masak-apa/templates/units.html
@@ -11,7 +11,7 @@
             <input autocomplete="off" autofocus class="form-control" id="origin" name="unit" placeholder="Add a new measurement unit" type="text">
         </div>
         <div class="mb-3">
-            <button class="btn btn-primary" type="submit">Add</button>
+            <button class="btn btn-primary form-control" type="submit">Add</button>
         </div>
     </form>
 </div>
