--- a/final-project/masak-apa/templates/origins.html
+++ b/final-project/masak-apa/templates/origins.html
@@ -8,10 +8,10 @@
 <div class="container-fluid mb-3">
     <form action="/admin/origins" method="post">
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="origin" name="origin" placeholder="Add a new origin" type="text">
+            <input autocomplete="off" autofocus class="form-control" id="origin" name="origin" placeholder="Add a new origin" type="text">
         </div>
         <div class="mb-3">
-            <button class="btn btn-primary" type="submit">Add</button>
+            <button class="btn btn-primary form-control" type="submit">Add</button>
         </div>
     </form>
 </div>
