--- a/final-project/masak-apa/templates/ingredients.html
+++ b/final-project/masak-apa/templates/ingredients.html
@@ -6,29 +6,33 @@
 
 {% block main %}
 
+
+
 <div class="container-sm mt-3">
-    <h2>List of Members</h2>
+    <h2>List of Ingredients</h2>
     <div class="mb-5"></div>
     <table class="table table-striped table-hover">
         <thead>
             <tr>
-                <th>Member ID</th>
+                <th>Ingredient ID</th>
                 <th>Name</th>
-                <th>Username</th>
-                <th>Email</th>
+                <th>Origin</th>
+                <th>Category</th>
+                <th>Image</th>
                 <th>Action</th>
             </tr>
         </thead>
         <tbody>
-            {% for user in users %}
+            {% for ingredient in ingredients %}
             <tr>
-                <td>{{ user["id"] }}</td>
-                <td>{{ user["name"] }}</td>
-                <td>{{ user["username"] }}</td>
-                <td>{{ user["email"] }}</td>
+                <td>{{ ingredient["id"] }}</td>
+                <td>{{ ingredient["name"] }}</td>
+                <td>{{ ingredient["origin"] }}</td>
+                <td>{{ ingredient["category"] }}</td>
+                <td>{{ ingredient["image"] }}</td>
                 <td>
-                    <a href="/admin/users/{{ user['id'] }}/edit" class="btn btn-warning">Edit</a>
-                    <a href="/admin/users/{{ user['id'] }}/delete" onclick="return confirm('Are you sure you want to delete this item?');" class="btn btn-danger">Delete</a>
+                    <a href="/admin/ingredients/{{ ingredient['id'] }}/edit" class="btn btn-warning">Edit</a>
+                    <a href="/admin/ingredients/{{ ingredient['id'] }}/delete" onclick="return confirm('Are you sure you want to delete this item?');" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
             {% endfor %}
