--- a/final-project/masak-apa/templates/admin.html
+++ b/final-project/masak-apa/templates/admin.html
@@ -15,7 +15,7 @@
     </ul>
   {% endif %}
 {% endwith %}
-    <h1>Howdy! {{ name['name'] }}</h1>
+    <h1 class="text-center">Howdy! {{ name['name'] }}</h1>
     <div class="container mt-5">
         <div class="row">
             <div class="text-white text-center col-sm-4 bg-primary p-5">
