--- a/final-project/masak-apa/templates/categories.html
+++ b/final-project/masak-apa/templates/categories.html
@@ -17,7 +17,7 @@
 </div>
 <hr>
 <div class="container-sm mt-3">
-    <h2>Ingredient Categories</h2>
+    <h2 class="text-center">Ingredient Categories</h2>
     <div class="mb-5"></div>
     <table class="table table-striped table-hover">
         <thead>
