--- a/final-project/masak-apa/templates/categories_edit.html
+++ b/final-project/masak-apa/templates/categories_edit.html
@@ -6,7 +6,7 @@
 
 {% block main %}
 <div class="container-fluid mb-3">
-    <h2>Edit Category</h2>
+    <h2 class="text-center">Edit Category</h2>
     <form action="/admin/categories/{{ categories['id'] }}/edit" method="post">
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" value="{{ categories['category'] }}" id="category" name="category" type="text">
