--- a/final-project/masak-apa/templates/ingredients.html
+++ b/final-project/masak-apa/templates/ingredients.html
@@ -6,40 +6,46 @@
 
 {% block main %}
 
-<div class="container-fluid mb-3">
-    <form action="/admin/ingredients" method="post">
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control" id="name" name="name" placeholder="Ingredient name" type="text">
+<div class="container">
+    <h1 class="text-center mb-3">Add a new ingredient</h1>
+    <form action="/admin/ingredients" method="post" enctype = "multipart/form-data">
+        <div class="form-group mb-3">
+            <label for="name">Ingredient name</label>
+            <input autocomplete="off" autofocus class="form-control" id="name" name="name" placeholder="Type ingredient name" type="text">
         </div>
-        <div>
+        <div class="form-group mb-3">
+            <label for="origin">Ingredient origin</label>
             <select name="origin" id="origin" class="form-control">
                 {% for origin in listOris %}
-                    <option value="origin['id']">{{ origin["origin"] }}</option>
+                    <option value="{{ origin['id'] }}">{{ origin["origin"] }}</option>
                 {% endfor %}
             </select>
         </div>
-        <div>
+        <div class="form-group mb-3">
+            <label for="category">Ingredient category</label>
             <select name="category" id="category" class="form-control">
                 {% for category in listCats %}
-                    <option value="category['id']">{{ category["category"] }}</option>
+                    <option value="{{ category['id'] }}">{{ category["category"] }}</option>
                 {% endfor %}
             </select>
         </div>
-        <div>
+        <div class="form-group mb-3">
+            <label for="file">Add image</label>
             <input type="file" class="form-control" name="file">
         </div>
-        <div>
+        <div class="form-group mb-3">
+            <label for="description">Ingredient description</label>
             <textarea name="description" class="form-control" placeholder="enter description"></textarea>
         </div>
-        <div class="mb-3">
-            <button class="btn btn-primary form-control" type="submit">Add</button>
+        <div class="form-group mb-3">
+            <button class="btn btn-primary form-control" type="submit" value="submit">Add</button>
         </div>
     </form>
 </div>
 <hr>
 
 <div class="container-sm mt-3">
-    <h2>List of Ingredients</h2>
+    <h2 class="text-center">List of Ingredients</h2>
     <div class="mb-5"></div>
     <table class="table table-striped table-hover">
         <thead>
@@ -59,7 +65,7 @@
                 <td>{{ ingredient["name"] }}</td>
                 <td>{{ ingredient["origin"] }}</td>
                 <td>{{ ingredient["category"] }}</td>
-                <td>{{ ingredient["image"] }}</td>
+                <td><img src="../uploads/{{ ingredient['image'] }}"></td>
                 <td>
                     <a href="/admin/ingredients/{{ ingredient['id'] }}/edit" class="btn btn-warning">Edit</a>
                     <a href="/admin/ingredients/{{ ingredient['id'] }}/delete" onclick="return confirm('Are you sure you want to delete this item?');" class="btn btn-danger">Delete</a>
