--- a/final-project/masak-apa/templates/users.html
+++ b/final-project/masak-apa/templates/users.html
@@ -7,7 +7,7 @@
 {% block main %}
 
 <div class="container-sm mt-3">
-    <h2>List of Members</h2>
+    <h2 class="text-center">List of Members</h2>
     <div class="mb-5"></div>
     <table class="table table-striped table-hover">
         <thead>
